Bug 325765 - Krita Wrap around mode doesn't work on .ora files(and perhaps others)
Summary: Krita Wrap around mode doesn't work on .ora files(and perhaps others)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-08 10:52 UTC by wolthera
Modified: 2014-01-24 07:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Ora file where the wraparound mode doesn't work. (998.10 KB, image/openraster)
2013-11-06 13:21 UTC, wolthera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2013-10-08 10:52:29 UTC
I've been working with wraparound for a little bit, and noticed that when I open an .ora file and use wraparound mode, the tiles are drawn, but the brushes aren't wrapping around.

It does work with .kra files and .png files.

It doesn't work if I save the .ora file to .kra, but if I later open the .kra file wraparound works as expected.
Of note, the terminal says the following when it DOES work:
"no display filter "/opt/project-neon/share/apps/krita/shaders/display.frag" 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths 
WARINING: there is no intersection point  in the basic smoothing algoriths"

It only shows the first line when it DOESN'T work.

Perhaps this happens to other file-formats as well, but I have yet to test those.

Reproducible: Sometimes
Comment 1 Halla Rempt 2013-10-30 15:12:52 UTC
Hm... it can hardly be related to the file format, actually -- unless your ora files have some attributes I don't know about. Can you please attach a file with which you can reproduce this bug?
Comment 2 Dmitry Kazakov 2013-11-04 14:34:45 UTC
Hi, wolthera, can you still reproduce this bug? And it yes, could you attach a file and describe the steps to reproduce it?
Comment 3 wolthera 2013-11-06 13:21:44 UTC
Created attachment 83371 [details]
Ora file where the wraparound mode doesn't work.

Yes, I still have this problem. Attached is the file. Just open it, hit 'w' and start painting near the border, you'll notice the brush stroke won't continue.
Comment 4 Halla Rempt 2014-01-04 11:35:22 UTC
Hm, yes... It's a strange file, though because the second layer is offset. Was this file created in mypaint? 

<?xml version='1.0' encoding='UTF-8'?>
<image h="640" w="512">
<stack>
<layer composite-op="svg:src-over" name="Layer" opacity="1.0" src="data/000.png" visibility="visible" x="0" y="1" />
<layer composite-op="svg:src-over" name="CHALK_color_2.png" opacity="1.0" src="data/001.png" visibility="visible" x="0" y="-384" />
</stack>
</image>
Comment 5 wolthera 2014-01-04 13:21:20 UTC
Yes, the second layer was modified in mypaint. (It was made in gimp)
Comment 6 Dmitry Kazakov 2014-01-08 14:05:13 UTC
I confirm the bug
Comment 7 Halla Rempt 2014-01-08 14:10:48 UTC
Yes, the bug occurs if the current layer is bigger than the image, I think.
Comment 8 Dmitry Kazakov 2014-01-08 14:52:16 UTC
Git commit 929454d24a4b49a1f7d2c5462e634a113b8f44fb by Dmitry Kazakov.
Committed on 08/01/2014 at 14:51.
Pushed by dkazakov into branch 'master'.

Fix the initialization of the default bounds of the Paint Layer

I don't know why the line was commented out :(

M  +1    -4    krita/image/kis_paint_layer.cc

http://commits.kde.org/calligra/929454d24a4b49a1f7d2c5462e634a113b8f44fb
Comment 9 Dmitry Kazakov 2014-01-24 07:39:53 UTC
Git commit 3d4b1e40eaa502188cbd5673f78c524af52653d2 by Dmitry Kazakov.
Committed on 08/01/2014 at 14:51.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix the initialization of the default bounds of the Paint Layer

I don't know why the line was commented out :(

M  +1    -4    krita/image/kis_paint_layer.cc

http://commits.kde.org/calligra/3d4b1e40eaa502188cbd5673f78c524af52653d2