Fix the initialization of the default bounds of the Paint Layer

I don't know why the line was commented out :(

BUG:325765